# pbanking_agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
agent/: graph.py  state.py
agent/nodes/: error_recovery.py  planner.py  response_formatter.py  schema_inspector.py  sql_executor.py  sql_generator.py  visualization_agent.py
devlog/: p1.md  p2.md
docs/: desafio2_arquitetura.md
tests/: test_agent.py
utils/: database.py  llm.py  llm_output.py  logger.py
