[project]
name = "personal-banker-copilot"
version = "0.1.0"
description = "LangGraph SQL agent for fintech client portfolio analysis"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "langfuse>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
